c4-payment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c4-payment
  labels:
    version: v1
    app: c4-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: c4-payment
  template:
    metadata:
      labels:
        version: v1
        app: c4-payment
    spec:
      containers:
      - name: c4-payment
        image: fernandocagale/c4-payment
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
