c4-payment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4-payment
  labels:
    app: c4-payment
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: c4-payment
